some spacing fix's

--- a/styles.css
+++ b/styles.css
@@ -215,7 +215,6 @@ h2 {
 #projects-head h2{
     color: #57c785;
     letter-spacing: 3px;
-    margin: 0px 0px 40px 0px;
 }
 
 #projects {
@@ -551,6 +550,10 @@ input:focus {
     .projects {
         padding: 0;
         margin: 0;
+    }
+
+    #projects-head h2{
+        margin-bottom: 40px;
     }
 
     .project {
